<resources>
    <string name="app_name">My Application</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="birth_date">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
</resources>
