<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_marginTop="24dp"
        android:hint="@string/first_name"
        app:layout_constraintBottom_toTopOf="@+id/lastName"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:hint="@string/last_name"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:hint="@string/email_address"
        app:layout_constraintBottom_toTopOf="@+id/birthDate"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/birthDate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/birth_date"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/gender"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/genderLabel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="Gender:"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toStartOf="@+id/gender"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthDate" />

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/genderLabel"
        app:layout_constraintTop_toBottomOf="@+id/birthDate">

        <RadioButton
            android:id="@+id/radioM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            app:layout_constraintStart_toEndOf="@id/genderLabel" />

        <RadioButton
            android:id="@+id/radioF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/confirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/gender"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/register"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="8dp"
        android:onClick="printData"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        tools:layout_editor_absoluteX="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>